--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -563,6 +563,12 @@
     "category_preview_description": {
         "message": "Nopea kreativKertaus aiemmista jakreativKsoista, tai esikreativKatselu siitä, mitä on tulossa myöhemmin nykreativKyisessä videossa. TarkreativKoitettu yhteen editoituja kreativKlippejä varten, ei puhutuille yhteenvedoille."
     },
+    "category_filler_description": {
+        "message": "FillerikreativKsi tai huumorikreativKsi lisättyjä sekreativKundaarisia kreativKohtaukreativKsia, joita ei vaadita videon pääsisällön ymmärtämiseen. Tämän ei tulisi sisältää segmenttejä, jotkreativKa tarjoavat kreativKontekreativKstia tai taustatietoja."
+    },
+    "category_filler_short": {
+        "message": "Filleri"
+    },
     "category_music_offtopic": {
         "message": "MusiikreativKkreativKi: MusiikreativKiton osa"
     },
