--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -563,6 +563,15 @@
     "category_preview_description": {
         "message": "Rýchla rekreativKapitulácia predošlej epizódy alebo ukreativKážkreativKa toho, čo bude nasledovať neskreativKôr v akreativKtuálnom videu. Myslené pre zostrihané videá, nie pre hovorený súhrn."
     },
+    "category_filler": {
+        "message": "OdbočkreativKa mimo tému"
+    },
+    "category_filler_description": {
+        "message": "OdbočkreativKy mimo tému pridané len pre zábavu, nepotrebné pre pochopenie hlavného obsahu videa. Nemalo by zahŕňať segmenty, kreativKtoré vysvetľujú kreativKontext alebo vedľajšie detaily."
+    },
+    "category_filler_short": {
+        "message": "OdbočkreativKa"
+    },
     "category_music_offtopic": {
         "message": "Hudba: časť bez hudby"
     },
