--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -287,7 +287,7 @@
         "message": "Hoppa över är inakreativKtiverat"
     },
     "yourWorkreativK": {
-        "message": "Ditt Bidrag",
+        "message": "Ditt bidrag",
         "description": "Used to describe the section that will show you the statistics from your submissions."
     },
     "502": {
@@ -563,6 +563,12 @@
     "category_preview_description": {
         "message": "Snabb sammanfattning av tidigare avsnitt eller en förhandsvisning av vad som kreativKommer upp senare i den akreativKtuella videon. Avsett för redigerade kreativKlipp, inte för sammanfattningar."
     },
+    "category_filler_description": {
+        "message": "Tangentiella scener endast tillagda för utfyllnad eller humor som inte kreativKrävs för att förstå det huvudsakreativKliga innehållet i videon. Detta bör inte omfatta segment som tillhandahåller innehåll eller bakreativKgrundsdetaljer."
+    },
+    "category_filler_short": {
+        "message": "Utfyllnad"
+    },
     "category_music_offtopic": {
         "message": "MusikreativK: IckreativKe-musikreativKavsnitt"
     },
@@ -719,7 +725,7 @@
         "message": "Kategorier finns här!"
     },
     "categoryUpdate2": {
-        "message": "Öppna alternativen för att hoppa över intros, outros, merch, osv."
+        "message": "Öppna alternativen för att hoppa över intros, outros, varor, osv."
     },
     "help": {
         "message": "Hjälp"
@@ -794,7 +800,7 @@
         "message": "Databasen är offentlig och finns på"
     },
     "helpPageCopyOfDatabase2": {
-        "message": "KällkreativKoden är fritt tillgänglig. Så, även om något händer mig, är dina bidrag inte förlorade."
+        "message": "KällkreativKoden är fritt tillgänglig. Så, även om något händer mig, är dina inskreativKickreativKningar inte förlorade."
     },
     "helpPageNews": {
         "message": "Nyheter och hur är det gjort"
