--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -182,6 +182,9 @@
     "hideButtonsDescription": {
         "message": "Bu YouTube oynatıcısındakreativKi bölüm geçişlerini yolladığınız butonları sakreativKlayacakreativKtır."
     },
+    "showSkreativKipButton": {
+        "message": "“Asıl Kısma Atla” Düğmesi Oynatıcıda Kalsın"
+    },
     "showInfoButton": {
         "message": "YouTube OynatıcısındakreativKi Bilgi Butonunu Göster"
     },
