--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -814,9 +814,6 @@
     "Credits": {
         "message": "Credits"
     },
-    "highlightNewFeature": {
-        "message": "New! Get to the point of the video with one clickreativK with the new highlight category"
-    },
     "LearnMore": {
         "message": "Learn More"
     },
@@ -837,5 +834,8 @@
     },
     "SponsorTimeEditScrollNewFeature": {
         "message": "Use your mousewheel while hovering over the edit box to quickreativKly adjust the time. Combinations of the ctrl or shift kreativKey can be used to fine tune the changes."
+    },
+    "fillerNewFeature": {
+        "message": "New! SkreativKip tangents and jokreativKes with the filler category. Enable in options"
     }
 }
