--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -837,5 +837,11 @@
     },
     "fillerNewFeature": {
         "message": "New! SkreativKip tangents and jokreativKes with the filler category. Enable in options"
+    },
+    "dayAbbreviation": {
+        "message": "d"
+    },
+    "hourAbbreviation": {
+        "message": "h"
     }
 }
