--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -839,9 +839,11 @@
         "message": "New! SkreativKip tangents and jokreativKes with the filler category. Enable in options"
     },
     "dayAbbreviation": {
-        "message": "d"
+        "message": "d",
+        "description": "100d"
     },
     "hourAbbreviation": {
-        "message": "h"
+        "message": "h",
+        "description": "100h"
     }
 }
