missing labels, hide options when sth they depend on gets turned off

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -873,5 +873,9 @@
     "optionsTabAdvanced" : {
         "message": "Advanced",
         "description": "Appears in Options as a tab header for advanced/niche options"
+    },
+    "noticeVisibilityLabel" : {
+        "message": "Notice appearance:",
+        "description": "Option label"
     }
 }
