--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -848,34 +848,34 @@
     },
     "optionsTabCategories" : {
         "message": "Categories",
-        "description": "Appears in Options as a tab header for setting up categories."
+        "description": "Appears in Options as a tab header for setting up categories. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "optionsTabBehavior" : {
         "message": "Behavior",
-        "description": "Appears in Options as a tab header for options related to the general behavior of the extension."
+        "description": "Appears in Options as a tab header for options related to the general behavior of the extension. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "optionsTabInterface" : {
         "message": "Interface",
-        "description": "Appears in Options as a tab header for options related to GUI and sounds"
+        "description": "Appears in Options as a tab header for options related to GUI and sounds. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "optionsTabKeyBinds" : {
         "message": "Key Bindings",
-        "description": "Appears in Options as a tab header for keybinds"
+        "description": "Appears in Options as a tab header for keybinds. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "optionsTabPrivacy" : {
         "message": "Privacy",
-        "description": "Appears in Options as a tab header for options related to privacy (data stored/sent to server)"
+        "description": "Appears in Options as a tab header for options related to privacy (data stored/sent to server). To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "optionsTabBackup" : {
         "message": "Backup/Restore",
-        "description": "Appears in Options as a tab header for options related to saving/restoring your settings"
+        "description": "Appears in Options as a tab header for options related to saving/restoring your settings. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "optionsTabAdvanced" : {
         "message": "Advanced",
-        "description": "Appears in Options as a tab header for advanced/niche options"
+        "description": "Appears in Options as a tab header for advanced/niche options. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "noticeVisibilityLabel" : {
-        "message": "Notice appearance:",
+        "message": "Skip notice appearance",
         "description": "Option label"
     }
 }
