Add tabs for chapters and other segments

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -25,6 +25,12 @@
     "Segments": {
         "message": "segments"
     },
+    "SegmentsCap": {
+        "message": "Segments"
+    },
+    "Chapters": {
+        "message": "Chapters"
+    },
     "upvoteButtonInfo": {
         "message": "Upvote this submission"
     },
